get elements by tags

--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Calculator</title>
-        <script src="operaciones.js"></script>
-    </head>
-    <body>
-        <h2>Calculator</h2>
-        <div class="calculator">
-            <form>
-               <h2 class="display">0</h2>
-                <input type="button" value="1" id="button_1">
-                <input type="button" value="2" id="button_2">
-                <input type="button" value="3" id="button_3">
-                <input type="button" value="+" id="button_add"><br>
-                <input type="button" value="4" id="button_4">
-                <input type="button" value="5" id="button_5">
-                <input type="button" value="6" id="button_6">
-                <input type="button" value="-" id="button_subtract"><br>
-                <input type="button" value="7" id="button_7">
-                <input type="button" value="8" id="button_8">
-                <input type="button" value="9" id="button_9">
-                <input type="button" value="0" id="button_0"><br>
-                <input type="reset"  value="reset">
-                <input type="submit">
-        </form>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Calculator</title>
+  </head>
+  <body>
+    <h2>Calculator</h2>
+    <div class="calculator">
+      <form>
+        <h2 class="display">0</h2>
+        <input type="button" value="1" id="button_1" />
+        <input type="button" value="2" id="button_2" />
+        <input type="button" value="3" id="button_3" />
+        <input type="button" value="+" id="button_add" /><br />
+        <input type="button" value="4" id="button_4" />
+        <input type="button" value="5" id="button_5" />
+        <input type="button" value="6" id="button_6" />
+        <input type="button" value="-" id="button_subtract" /><br />
+        <input type="button" value="7" id="button_7" />
+        <input type="button" value="8" id="button_8" />
+        <input type="button" value="9" id="button_9" />
+        <input type="button" value="0" id="button_0" /><br />
+        <input type="reset" value="reset" />
+        <input type="submit" />
+      </form>
     </div>
-    </body>
+    <script src="operaciones.js"></script>
+  </body>
 </html>
