--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
         <h2 class="lives-result">0</h2>
       </div>
       <div class="buttons">
-        <div class="first-row">
-          <button class= "actions" id="erase" value="x">«</button>
-          <button class= "actions" id="clear" value="C">C</button>
-          <button class= "actions" id="result" value ="=">=</button>
+        <div class="button-row first-row">
+          <button class="actions" id="erase" value="x">«</button>
+          <button class="actions" id="clear" value="C">C</button>
+          <button class="actions" id="result" value ="=">=</button>
         </div>
-        <div class="second-row">
+        <div class="button-row second-row">
           <button class="numbers" id="number-7" value="7">7</button>
           <button class="numbers" id="number-8" value="8">8</button>
           <button class="numbers" id="number-9" value="9">9</button>
           <button class="operators" id="operator-divide" value ="/">÷</button>
         </div>
-        <div class="third-row">
+        <div class="button-row third-row">
           <button class="numbers" id="number-4" value="4">4</button>
           <button class="numbers" id="number-5" value="5">5</button>
           <button class="numbers" id="number-6" value="6">6</button>
           <button class="operators" id="operator-multiply" value="*">x</button>
         </div>
-        <div class="fourth-row">
+        <div class="button-row fourth-row">
           <button class="numbers" id="number-1" value="1">1</button>
           <button class="numbers" id="number-2" value="2">2</button>
           <button class="numbers" id="number-3" value="3">3</button>
           <button class="operators" id="operator-subtract" value="-">-</button>
         </div>
-        <div class="fifth-row">
+        <div class="button-row fifth-row">
           <button class="numbers" id="number-0" value="0">0</button>
           <button class="numbers" id="number-comma" value=".">.</button>
           <button class="operators" id="operator-add" value="+">+</button>
