--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </div>
       <div class="buttons">
         <div class="button-row first-row">
-          <button class="actions" id="erase" value="x">«</button>
-          <button class="actions" id="clear" value="C">C</button>
-          <button class="actions" id="result" value ="=">=</button>
+          <button class="actions" id="erase" value="e">«</button>
+          <button class="actions" id="clear" value="c">C</button>
+          <button id="equal" value ="=">=</button>
         </div>
         <div class="button-row second-row">
           <button class="numbers" id="number-7" value="7">7</button>
