--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="buttons">
         <div class="button-row first-row">
-          <button class="actions" id="erase" value="e">«</button>
+          <button class="actions clean" id="erase" value="e">«</button>
           <button class="actions" id="clear" value="c">C</button>
           <button id="equal" value ="=">=</button>
         </div>
